# add library
add_library (itl_core abstract_array.cc schar_array.cc uchar_array.cc
             int8_array.cc int16_array.cc int32_array.cc int64_array.cc
             uint8_array.cc uint16_array.cc uint32_array.cc uint64_array.cc
             float_array.cc double_array.cc grid.cc cartesian_grid.cc field.cc)
